[project]
name = "banking-system-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Fellipe Dultra",email = "fellipesdultra10@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[all] (>=0.136.1,<0.137.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==3.2.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
